--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Gui Lima</p>
+        <p>desenvolvimento em programação</p>
     </footer>
 </body>
 </html>
