--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>AULA DE PROGRAMAÇÃO</h1>
+        <h1>AULA DE PROGRAMAÇÃO sexta</h1>
         <nav>
             <a href="index.html">Mundo</a>
-            <a href="#">Minha escola</a>
+            <a href="#">escola</a>
         </nav>
     </header>
     <main class="graficos-section">
